--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,16 +1,12 @@
 {
-	"compilerOptions": {
-		"target": "es2015",
-		"allowSyntheticDefaultImports": false,
-		"baseUrl": "./",
-		"paths": {
-			"@/*": [
-				"src/*"
-			]
-		}
-	},
-	"exclude": [
-		"node_mudules",
-		"dist"
-	]
+  "compilerOptions": {
+    "lib": ["es2016"],
+    "target": "es2015",
+    "allowSyntheticDefaultImports": false,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "exclude": ["node_mudules", "dist"]
 }
