--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es2016"],
+    "lib": ["dom","es2016"],
     "target": "es2015",
     "allowSyntheticDefaultImports": false,
     "baseUrl": "./",
