--- a/package.json
+++ b/package.json
@@ -20,22 +20,23 @@
   },
   "homepage": "https://github.com/McLisak/ui-components#readme",
   "devDependencies": {
-    "autoprefixer": "^9.4.10",
-    "clean-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^5.0.0",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.15.1",
+    "autoprefixer": "^9.7.2",
+    "babel-eslint": "^10.0.3",
+    "clean-webpack-plugin": "^2.0.2",
+    "copy-webpack-plugin": "^5.0.5",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "prettier-eslint": "^9.0.1",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "sass-loader": "^7.3.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "eventemitter3": "^3.1.0"
+    "eventemitter3": "^3.1.2"
   }
 }
